[INFER] Make type failures abort like assertions, bug 657881. r=bhackett